# english-words-bot

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0597ff9bda20_initial_tables_users_and_words.py  a1b2c3d4e5f6_add_user_score_and_word_translations.py
bot/: __main__.py  config.py
bot/db/: session.py
bot/handlers/: dictionary.py  donate.py  onboarding.py  quiz.py  start.py  word.py
bot/keyboards/: donate.py  main.py  onboarding.py  quiz.py  word.py
bot/middlewares/: db.py
bot/models/: __init__.py  user.py  word.py
bot/scheduler/: __init__.py
bot/services/: dictionary.py  llm.py  onboarding.py  quiz.py  word_bank.py
tests/: conftest.py
tests/test_services/: test_dictionary.py  test_llm.py  test_onboarding.py  test_quiz.py
