[project]
name = "english-words-bot"
version = "0.1.0"
description = "Telegram bot for learning English words with AI-powered explanations and quizzes"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4",
    "asyncpg>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.14,<2",
    "openai>=1.60,<2",
    "pydantic-settings>=2.7,<3",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "aiosqlite>=0.20,<1",
    "ruff>=0.9,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["bot*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
